//protoc --go_opt=paths=source_relative --go_out=./ ./protobuf/*.proto

syntax = "proto3";
package models;

message ProtoArgs {
  repeated bytes args = 1;
}

message Action {
  uint32 action_type = 1;
  bytes amount = 2;
  string method = 3;
  bytes args = 4;
  uint64 gas_limit = 5;
}

message ActionResult {
  Action input_action = 1;
  bool success = 2;
  string error = 3;
  uint64 gas_used = 4;
  uint64 remaining_gas = 5;
  bytes output_data = 6;
  repeated ActionResult sub_action_results = 7;
}

message ProtoReadShardedDataRequest {
  uint32 type = 1;
  bytes req = 2;

  message ReadContractDataRequest {
    bytes key = 1;
  }

  message ReadIdentity {
    bytes addr = 1;
  }
}

