syntax = "proto3";
package models;

message ProtoCallContractArgs {
  repeated bytes args = 1;
}